[package]
name = "protonSComm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4.0"
serialport = "4.3.0"
log = "0.4"
simple_logger = "5.0.0"
cadh = { git = "ssh://git@github.com/javerom/tlm.git" }
cadh_builder = { git = "ssh://git@github.com/javerom/tlm.git" }
crossbeam = "0.8"
csv = "1.1"
